--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.1.1",
+    "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-graph-vis": "^1.0.7",
+    "react-graph-vis": "1.0.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
