--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^18.7.9",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "typescript": "^4.7.4"
   }
 }
