--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
+    "@types/vis": "^4.21.24",
     "typescript": "^4.7.4"
   }
 }
